# KirCute-Physics-Cpp

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
demo/: BilliardsDemo.cpp  QuadtreeDemo.cpp  WaveDemo.cpp
include/Easyx/: easyx.h  graphics.h
include/KirCute-Physics-Cpp/: easyx_renderer.h  frame.h  quadtree_store.h  rbody.h  render.h  store.h  utils.h  vector_store.h  world.h
src/: easyx_renderer.cpp  frame.cpp  quadtree_store.cpp  rbody.cpp  vector_store.cpp  world.cpp
